--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,7 @@ jobs:
       uses: nxtlvlsoftware/pmmp-phpstan-action@3
       with:
         phpstan-config: phpstan.neon.dist
+    - name: wget virions, formapi
+      uses: wei/wget@v1
+      with:
+        args: -O vendor/libFormAPI.phar https://poggit.pmmp.io/r/54590/libFormAPI_dev-2.phar
