--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         echo Making directory...
         mkdir vendor
         echo Directory made.
-    - name: wget virions, formapi
+    - name: wget virions, libFormAPI
       uses: wei/wget@v1
       with:
         args: -O vendor/libFormAPI.phar https://poggit.pmmp.io/r/54590/libFormAPI_dev-2.phar
