--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,6 +10,7 @@ parameters:
         - phar:///pocketmine/PocketMine-MP.phar/vendor/autoload.php
     autoload_directories:
         - /source/src
-        - phar:///source/libFormAPI.phar/src
+        - /src
+        - phar:///source/libFormAPI_dev-2.phar/src
     excludes_analyse:
         - vendor
