--- a/.poggit.yml
+++ b/.poggit.yml
@@ -9,4 +9,6 @@ projects:
     libs:
       - src: jojoe77777/FormAPI/libFormAPI
         version: ^1.3
+      - src: JackMD\UpdateNotifier\UpdateNotifier
+        version: ^1.0.0
 ...
