--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: wget virions, UpdateNotifier
       uses: wei/wget@v1
       with:
-        args: -O vendor/UpdateNotifier.phat https://poggit.pmmp.io/r/62162/UpdateNotifier_dev-3.phar
+        args: -O vendor/UpdateNotifier.phar https://poggit.pmmp.io/r/62162/UpdateNotifier_dev-3.phar
     - name: Run PHPStan
       uses: nxtlvlsoftware/pmmp-phpstan-action@3
       with:
