--- a/.poggit.yml
+++ b/.poggit.yml
@@ -11,4 +11,6 @@ projects:
         version: ^1.3
       - src: JackMD/UpdateNotifier/UpdateNotifier
         version: ^1.0.0
+      - src: JackMD/ConfigUpdater/ConfigUpdater
+        version: ^1.0.0
 ...
