Allow removal of Spawners

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,4 +6,10 @@ api: 3.0.0
 author: Heisenburger69
 website: https://github.com/Heisenburger69
 description: Plugin implementing a Stackable Spawner System for PMMP
+
+permissions:
+  burgerspawners.silktouch:
+    default: op
+    description: Allows a user to use SilkTouch on Spawners
+
 ...
